Fixing layout of sharing preview photo and link to be aligned centered. #1416

--- a/src/html/assets/themes/fabrizio1.0/stylesheets/less/cover.less
+++ b/src/html/assets/themes/fabrizio1.0/stylesheets/less/cover.less
@@ -2,6 +2,7 @@
   position:relative;
   width:200px;
   height:200px;
+  margin:auto;
 
   img {
     background: url("../images/album-cover-default.png") 5px 5px no-repeat;
